# bluegone

./: Cargo.toml  flake.nix  readme.md
examples/: config.toml
src/: backends.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  state.rs  utils.rs
src/backends/: mod.rs  tty.rs  x11.rs
