[package]
name = "bluegone"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "derive", "string"] }
x11rb = { version = "0.13.1", features = ["randr"] }
serde = { version = "1.0.203", features = ["derive"] }
sunrise-sunset-calculator = "1.0.1"
toml = "0.8.14"
regex = "1.10.5"
chrono = "0.4.38"
sysinfo = "0.31.2"
daemonize-me = "2.0.1"
